--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
   }
   
   .header {
-    background-color: #f1f1f1;
+    background-image: url(images/bgheader.png);
     padding: 30px;
     text-align: center;
   }
