--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body {
     background-image: url(images/bgheader.png);
     padding: 30px;
     text-align: center;
+    color: #f2f2f2;
   }
   
   #navbar {
