--- a/styles.css
+++ b/styles.css
@@ -41,4 +41,11 @@ body {
   .content {
     padding: 16px;
   }
-  
+
+  @keyframes move {
+    from {left: 0;}
+    to {left: 110px;}}
+
+  .logo {
+    animation: move 5s ease-in-out infinite;
+  }
