--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,8 @@ body {
     padding: 16px;
   }
 
-  @keyframes move {
-    from {left: 0;}
-    to {left: 110px;}
+  .logo {
+    position: absolute;
+    left: 5px;
+    top: 5px;
   }
