--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,10 @@ body {
   .header {
     background-image: url(images/bgheader.png);
     display: flex;
-    justify-content: center;
   }
 
   .title {
+    justify-content: center;
     padding: 30px;
     text-align: center;
     color: #f2f2f2;
@@ -51,4 +51,9 @@ body {
     position: relative;
     left: 20px;
     top: 20px;
+  }
+
+  .navbar {
+    display: flex;
+    justify-content: space-evenly;
   }
