--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body {
   .header {
     background-image: url(images/bgheader.png);
     display: flex;
+    filter: grayscale(100%);
   }
 
   .title {
