--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
   
   .header {
     background-image: url(images/bgheader.png);
-    background-position: top;
+    background-position: bottom;
     display: flex;
   }
 
