--- a/styles.css
+++ b/styles.css
@@ -6,13 +6,15 @@ body {
   
   .header {
     background-image: url(images/bgheader.png);
-    background-size: cover;
     display: flex;
   }
 
   .title {
     justify-content: center;
-    padding: 30px;
+    padding-top: 100px;
+    padding-right: 30px;
+    padding-bottom: 50px;
+    padding-left: 100px;
     color: #f2f2f2;
   }
   
