--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,12 @@ body {
   
   .header {
     background-image: url(images/bgheader.png);
-    display: flex;
+    display: inline-flex;
   }
 
   .title {
+    background-color: #000;
+    opacity: 0.3;
     padding-top: 20px;
     padding-left: 30px;
     color: #f2f2f2;
