--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body {
     background-image: url(images/bgheader.png);
     background: rgba(0, 0, 0, 0.4);
     display: flex;
+    -ms-flex-align: center;
   }
 
   .title {
