--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,14 @@ body {
   }
   
   .header {
-    background: url(images/bgheader.png), rgba(0, 0, 0, 0.5);
+    background: 
+    
+    linear-gradient(
+      rgba(0, 0, 0, 0.7), 
+      rgba(0, 0, 0, 0.7)
+    ),
+
+    url(images/bgheader.png);
     display: flex;
     
   }
