--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,10 @@ body {
   .header {
     background: 
     linear-gradient(
-      rgba(0, 0, 0, 0.8), 
-      rgba(0, 0, 0, 0.4)
+      rgba(0, 0, 0, 0.6), 
+      rgba(0, 0, 0, 0.2)
     ),
-    url(images/bgheader.png);
+    url(images/bgheader_cropped.png);
     display: flex;
     position: relative; /* Make the header the positioning context */
     height: 700px; /* Adjust height as needed */
