--- a/styles.css
+++ b/styles.css
@@ -33,21 +33,72 @@ body {
 }
 
 .content {
-    font-family: Georgia, helvetica, sans-serif;
     padding: 16px;
 }
 
 body {
-    background-color: rgb(75, 116, 85);
+    font-family: Georgia, helvetica, sans-serif;
+    background-color: white;
+    /*rgb(75, 116, 85)*/
 }
 
 .header-bottom-text {
     font-family: Georgia, helvetica, sans-serif;
     position: relative;
-    background-color: rgb(75, 116, 85);
     text-align: center;
     font-size: 120%;
     color: #312a7a;
     padding: 10px 0;
     margin-top: -10%;
 }
+
+
+body {
+    font-family: "Lato", sans-serif;
+    transition: background-color .5s;
+  }
+  
+  .sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+  }
+  
+  .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
+  
+  .sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
+  
+  #main {
+    transform: translate(1%, 0%);
+    transition: margin-left .5s;
+    position: sticky;
+  }
+  
+  @media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+  }
