--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,7 @@ body {
     color: #312a7a;
     padding: 10px 0;
     margin-top: -10%;
+    text-shadow: 5px 5px 4px gray;
 }
 
 
@@ -93,9 +94,16 @@ body {
   }
   
   #main {
+    font-size:30px;
+    cursor:pointer;
+    display: flex;
     transform: translate(1%, 0%);
     transition: margin-left .5s;
     position: sticky;
+    top: 0;
+    overflow: hidden;
+    color:#2e2b7c;
+    background-color: #73add5;
   }
   
   @media screen and (max-height: 450px) {
