--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,7 @@ body {
   #main {
     font-size:30px;
     cursor:pointer;
-    display: flex;
+    display: inline-block;
     transform: translate(1%, 0%);
     transition: margin-left .5s;
     position: sticky;
@@ -104,6 +104,8 @@ body {
     overflow: hidden;
     color:#2e2b7c;
     background-color: #73add5;
+    padding: 10px 20px;
+    border-radius: 5px;
   }
   
   @media screen and (max-height: 450px) {
