--- a/styles.css
+++ b/styles.css
@@ -112,3 +112,27 @@ body {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
   }
+
+#overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4); /* Couleur semi-transparente */
+    z-index: 1; /* Place l'overlay en dessous du sidenav */
+    display: none; /* Masque l'overlay par défaut */
+}
+
+#mySidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 2; /* Place le sidenav au-dessus de l'overlay */
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+}
