--- a/styles.css
+++ b/styles.css
@@ -5,16 +5,23 @@ body {
 }
 
 .header {
-    background: 
-    linear-gradient(
-      rgba(0, 0, 0, 0.5), 
-      rgba(0, 0, 0, 0.2)
-    ),
-    url(images/bgheader_cropped.png);
-    display: flex;
-    position: relative;
-    height: 700px;
-    mask: radial-gradient(80% 30% at bottom,#0000 100%,#000);
+  background: no-repeat center center fixed
+  linear-gradient(
+    rgba(0, 0, 0, 0.5), 
+    rgba(0, 0, 0, 0.2)
+  ),
+  url(images/bgheader_cropped.png);
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 10%;
+  width: 100%;
+  display: flex;
+  position: relative;
+  height: 700px;
+  mask: radial-gradient(80% 30% at bottom,#0000 100%,#000);
+  -webkit-mask: radial-gradient(80% 30% at bottom,#0000 100%,#000); /* For WebKit browsers */
 }
 
 .title {
