--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,14 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     margin: 0;
-    font-size: 28px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    font-family: Georgia, helvetica, sans-serif;
+    background-color: white;
+    color: #312a7a;
+    transition: background-color .5s;
 }
 
 .header {
@@ -22,15 +29,6 @@ body {
   -webkit-mask: radial-gradient(80% 30% at bottom,#0000 100%,#000); /* For WebKit browsers */
 }
 
-.title {
-    position: absolute;
-    color: #f2f2f2;
-    text-align: center;
-    left: 50%;
-    top: 30%;
-    transform: translate(-50%, -50%);
-}
-
 .logo {
     position: relative;
     left: 15px;
@@ -43,12 +41,6 @@ body {
     padding: 16px;
 }
 
-body {
-    font-family: Georgia, helvetica, sans-serif;
-    background-color: white;
-    /*rgb(75, 116, 85)*/
-}
-
 .header-bottom-text {
     font-family: Georgia, helvetica, sans-serif;
     position: relative;
@@ -59,12 +51,6 @@ body {
     margin-top: -10%;
     text-shadow: 5px 5px 4px gray;
 }
-
-
-body {
-    font-family: "Lato", sans-serif;
-    transition: background-color .5s;
-  }
   
   .choicenav{
     border-bottom: 2px dotted #ccc;
@@ -109,7 +95,7 @@ body {
     font-size:30px;
     cursor:pointer;
     display: inline-block;
-    transform: translate(1%, 0%);
+    transform: translate(1%, 5%);
     transition: margin-left .5s;
     position: sticky;
     top: 0;
@@ -118,6 +104,7 @@ body {
     background-color: #73add5;
     padding: 10px 20px;
     border-radius: 5px;
+    z-index: 1000; /* Assure que le bouton reste au-dessus du texte */
   }
   
   @media screen and (max-height: 450px) {
@@ -147,4 +134,26 @@ body {
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
+}
+
+.title {
+    scroll-margin-top: 100px;
+}
+
+.text {
+    margin-left: 2%;
+    width: 90%;
+}
+
+.text-with-image{
+    display:flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+}
+
+.text-with-image img {
+    width: 360px;
+    height: 360px;
+    transform: translate(10%, -10%);
 }
