--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.4); /* Couleur semi-transparente */
-    z-index: 1; /* Place l'overlay en dessous du sidenav */
+    z-index: 999; /* Place l'overlay en dessous du sidenav */
     display: none; /* Masque l'overlay par défaut */
 }
 
@@ -141,7 +141,7 @@ body {
     height: 100%;
     width: 0;
     position: fixed;
-    z-index: 2; /* Place le sidenav au-dessus de l'overlay */
+    z-index: 1000; /* Place le sidenav au-dessus de l'overlay */
     top: 0;
     left: 0;
     background-color: #111;
@@ -179,9 +179,17 @@ body {
 }
 
 .img{
+  filter: brightness(100%);
+  transition: filter 0.5s ease; /* Ajoute une transition fluide */
+  z-index: 1;
   display: block;
   width: 100%;
   height: auto;
+}
+
+
+body.darken img {
+    filter: brightness(60%); /* Réduit la luminosité des images */
 }
 
 .overlay-BP {
