--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
 }
+@media screen and (max-width: 1000px) {
+  body { font-size: 14px;}
+  }
+
 
 html {
     scroll-behavior: smooth;
@@ -14,6 +18,7 @@ body {
     background-color: white;
     color: #312a7a;
     transition: background-color .5s;
+    overflow-x: hidden;
 }
 
 .header {
@@ -23,6 +28,7 @@ body {
     rgba(0, 0, 0, 0.2)
   ),
   url(images/bgheader_cropped.png);
+  background-attachment: fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -35,7 +41,7 @@ body {
 }
 
 .logo {
-  position: relative;
+  position: fixed;
   left: 15px;
   top: 15px;
   width: 125px;
@@ -46,7 +52,7 @@ body {
   font-family: Georgia, helvetica, sans-serif;
   position: relative;
   text-align: center;
-  font-size: 120%;
+  font-size: 190%;
   color: #312a7a;
   padding: 10px 0;
   margin-top: -10%;
@@ -133,13 +139,16 @@ body {
 
 
 .content {
-  padding: 16px;
   text-align: justify;
 }
 
 .title {
   scroll-margin-top: 100px;
-  text-align: center; ;
+  text-align: center;
+}
+
+h3 {
+  color: orange
 }
 
 .text {
@@ -147,7 +156,25 @@ body {
   width: 90%;
 }
 
+#text-49 {
+  padding: 50px;
+  background-color: darkblue;
+  color: #ffffff;
+}
 
+a {
+  color: green;
+}
+
+iframe {
+  position: relative;
+  width: 50%;
+}
+
+#text-implication {
+  padding: 50px;
+  background-color: rgb(241, 66, 217);
+}
 
 /* Pour tout les textes avec les images */
 
@@ -205,7 +232,7 @@ body.darken img {
 
 #tap-historique img {
   width: 100%;
-  margin-left: 20%; /* Remplace translate(22%, 10%) */
+  margin-left: 10%; /* Remplace translate(22%, 10%) */
   margin-top: 10%; /* Remplace translate(22%, 10%) */
 }
 .text-historique {
@@ -214,10 +241,10 @@ body.darken img {
 .overlay-archive {
   position: absolute;
   top: 80%; /* Ajustez pour remplacer translate(-35%) */
-  left: 13%; /* Ajustez pour remplacer translate(13%) */
+  left: 8%; /* Ajustez pour remplacer translate(13%) */
   background: rgba(0, 0, 0, 0.5);
   color: #f1f1f1;
-  width: 100%;
+  width: 90%;
   transition: .5s ease;
   opacity: 0;
   font-size: 20px;
@@ -229,11 +256,54 @@ body.darken img {
 }
 
 
+.text-terre {
+  width: 50%;
+}
+#tap-terre img {
+  width: 260%;
+  margin-left: -250%; /* Remplace translate(22%, 10%) */
+  margin-top: 10%; /* Remplace translate(22%, 10%) */
+  transform: rotate(-2deg);
+}
+.overlay-terre-1 {
+  position: absolute;
+  top: 41.2%; /* Ajustez pour remplacer translate(-35%) */
+  left: -168%; /* Ajustez pour remplacer translate(13%) */
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  width: 90%;
+  transition: .5s ease;
+  opacity: 0;
+  font-size: 20px;
+  padding: 20px;
+  text-align: center;
+  transform: rotate(-2deg);
+}
+.overlay-terre-2 {
+  position: absolute;
+  top: 88%; /* Ajustez pour remplacer translate(-35%) */
+  left: -168%; /* Ajustez pour remplacer translate(13%) */
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  width: 90%;
+  transition: .5s ease;
+  opacity: 0;
+  font-size: 20px;
+  padding: 20px;
+  text-align: center;
+  transform: rotate(-2deg);
+}
+.container-image:hover .overlay-terre-1{
+  opacity: 1;
+}
+.container-image:hover .overlay-terre-2{
+  opacity: 1;
+}
 
 /* Pour les images à gauche */
 
-.text-ASC{
-  margin-left: 5%;
+.text-ASC, .text-âges{
+  margin-left: 8%;
 }
 
 #tap-ASC img {
@@ -259,9 +329,27 @@ body.darken img {
   opacity: 1;
 }
 
+.overlay-groupe {
+  position: absolute;
+  top: 0%;/* Ajustez pour remplacer translate(-30%) */
+  left: 1%; /* Pas besoin de translate(0%) */
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  width: 100%;
+  transition: .5s ease;
+  opacity: 0;
+  font-size: 20px;
+  padding: 20px;
+  text-align: center;
+}
+
+.container-image:hover .overlay-groupe {
+  opacity: 1;
+}
+
 /* Style pour la section des moyens de financement */
 .financement {
-    background-color: #f9f9f9; /* Couleur de fond différente */
+    background-color: #ffffff; /* Couleur de fond différente */
     padding: 50px 20px;
     text-align: center;
 }
@@ -304,9 +392,8 @@ body.darken img {
     grid-column: span 3; /* Étend le texte sur toute la largeur des colonnes */
     text-align: center;
     margin: 20px 0; /* Ajoute de l'espace au-dessus et en dessous du texte */
-    font-size: 18px;
-    color: #333; /* Couleur du texte */
-    font-weight: bold;
+    font-size: 20px;
+    color: #312a7a; /* Couleur du texte */
 }
 
 /* Style pour les détails */
@@ -328,7 +415,7 @@ body.darken img {
     padding: 30px;
     border-radius: 10px;
     text-align: center;
-    max-width: 600px;
+    max-width: 650px;
     width: 90%;
     position: relative;
 }
@@ -348,3 +435,7 @@ body.darken img {
     color: #333;
 }
 
+.don-list {
+    text-align: left;
+    list-style-type: square;
+}
